# Uber-Ride-Gen

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/db_sqllite/: uber_rides.db
src/app/: app.py  dash.py  generate_tables_fake.py
src/app/components/: footer.py  sidebar.py
src/app/configs/: settings.py
src/database/: declare_table.py
src/pipe/: generate_tables_fake.py
